[gd_scene load_steps=6 format=3 uid="uid://c3l866fdqt7pf"]

[ext_resource type="PackedScene" uid="uid://1o2ta17yc5bp" path="res://game/entities/weapons/abstract_weapon.tscn" id="1_sk5u1"]
[ext_resource type="Script" uid="uid://lauvvj5xhbud" path="res://game/entities/weapons/launcher/abstract_launcher_weapon.gd" id="2_mxjpe"]
[ext_resource type="Texture2D" uid="uid://gh7mwehpqfco" path="res://particle_textures/flame_medium.tres" id="4_0brql"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_u8eh0"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 1.0
angle_min = -179.99998
angle_max = 180.00002
inherit_velocity_ratio = 0.5
direction = Vector3(-1, 0, 0)
spread = 15.0
initial_velocity_min = 30.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0brql"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 1.0
angle_min = -179.99998
angle_max = 180.00002
inherit_velocity_ratio = 0.5
direction = Vector3(-1, 0, 0)
spread = 15.0
initial_velocity_min = 30.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)

[node name="AbstractLauncherWeapon" instance=ExtResource("1_sk5u1")]
script = ExtResource("2_mxjpe")
sector_angle = 5
type = 4

[node name="LeftParticles" type="GPUParticles2D" parent="." index="0"]
emitting = false
amount = 16
texture = ExtResource("4_0brql")
lifetime = 0.3
one_shot = true
process_material = SubResource("ParticleProcessMaterial_u8eh0")

[node name="RightParticles" type="GPUParticles2D" parent="." index="1"]
emitting = false
amount = 16
texture = ExtResource("4_0brql")
lifetime = 0.3
one_shot = true
process_material = SubResource("ParticleProcessMaterial_0brql")

[node name="CooldownTimer" type="Timer" parent="." index="2"]
wait_time = 0.5
one_shot = true

[node name="SecondMuzzle" type="Node2D" parent="." index="4"]

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
